Fix bug #68191: Broken reference across objects